Fix layout problems in game list caused by long game names

--- a/stc/style.css
+++ b/stc/style.css
@@ -265,6 +265,7 @@ table.gamelist thead {
 
 table.gamelist td {
     padding-right: 2ex;
+    white-space: nowrap;
 }
 
 button {
